urls for wikipedia entries

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,4 +342,31 @@ Furthermore, some slots are already taken by unwanted chips you'll have to deal 
     <string name="coins_got">Got %1$d out of %2$d coins got.</string>
     <string name="coins_got_plural">Got %1$d out of %2$d coins</string>
     <string name="neumann">"All modern computers have an internal von Neumann architecture. This way of combining memory, arithmetic unit and program control to create a freely programmable machine was largely developed by John von Neumann, who is considered one of the fathers of computer science. He was a brilliant mathematician who, among other things, laid the mathematical foundations of quantum mechanics, but also decisively advanced game theory. He was also a highly intelligent and witty person and a real party animal.\n\nThe darker side of von Neumann's life is his contributions to military research and the development and use of weapons of mass destruction.\n "</string>
+    <string name="url_turing">https://en.wikipedia.org/wiki/Alan_Turing</string>
+    <string name="url_lovelace">https://en.wikipedia.org/wiki/Ada_Lovelace</string>
+    <string name="url_hollerith">https://en.wikipedia.org/wiki/Herman_Hollerith</string>
+    <string name="url_franke">https://en.wikipedia.org/wiki/Herbert_W._Franke</string>
+    <string name="url_osborne">https://en.wikipedia.org/wiki/Adam_Osborne</string>
+    <string name="url_tramiel">https://en.wikipedia.org/wiki/Jack_Tramiel</string>
+    <string name="url_mandelbrot">https://en.wikipedia.org/wiki/Benoit_Mandelbrot</string>
+    <string name="url_hamilton">https://en.wikipedia.org/wiki/Margaret_Hamilton_(software_engineer)</string>
+    <string name="url_pascal">https://en.wikipedia.org/wiki/Blaise_Pascal</string>
+    <string name="url_conway">https://en.wikipedia.org/wiki/John_Horton_Conway</string>
+    <string name="url_cernettes">https://en.wikipedia.org/wiki/Les_Horribles_Cernettes</string>
+    <string name="url_vaughan">https://en.wikipedia.org/wiki/Dorothy_Vaughan</string>
+    <string name="url_schneier">https://en.wikipedia.org/wiki/Bruce_Schneier</string>
+    <string name="url_diffie">https://en.wikipedia.org/wiki/Whitfield_Diffie</string>
+    <string name="url_zuse">https://en.wikipedia.org/wiki/Konrad_Zuse</string>
+    <string name="url_meier">https://en.wikipedia.org/wiki/Sid_Meier</string>
+    <string name="url_kilby">https://en.wikipedia.org/wiki/Jack_Kilby</string>
+    <string name="url_neumann">https://en.wikipedia.org/wiki/John_von_Neumann</string>
+    <string name="url_knuth">https://en.wikipedia.org/wiki/Donald_Knuth</string>
+    <string name="url_hopper">https://en.wikipedia.org/wiki/Grace_Hopper</string>
+    <string name="url_leibniz">https://en.wikipedia.org/wiki/Gottfried_Wilhelm_Leibniz</string>
+    <string name="url_chappe">https://en.wikipedia.org/wiki/Claude_Chappe</string>
+    <string name="url_ohm">https://en.wikipedia.org/wiki/Georg_Ohm</string>
+    <string name="url_volta">https://en.wikipedia.org/wiki/Alessandro_Volta</string>
+    <string name="url_shannon">https://en.wikipedia.org/wiki/Claude_Shannon</string>
+    <string name="url_wiener">https://en.wikipedia.org/wiki/Norbert_Wiener</string>
+    <string name="url_boole">https://en.wikipedia.org/wiki/George_Boole</string>
 </resources>
