--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -96,7 +96,7 @@
     <string name="shortdesc_refund">remboursement vente</string>
     <string name="shortdesc_max_hero_upgrade">niveau max des héros</string>
     <string name="upgrade_format">%s  [coût: %d]</string>
-    <string name="stage_number">Niveau %d</string>
+    <string name="stage_number">Niveau %s</string>
     <string name="toast_stage_cleared">Niveau réussi</string>
     <string name="HERO_EFFECT_CHIPSPEED">réduit le temps de recharge de toutes les puces %s</string>
     <string name="HERO_EFFECT_HEAT">réduit la géneration de chaleur</string>
@@ -214,7 +214,7 @@
     <string name="HERO_EFFECT_COINSTRENGTH">réduit la puissance des crypto-écus</string>
     <string name="boole">L\'exploit de George Boole Jr. est d\'avoir formalisé les concepts de la logique et d\'en avoir ainsi fait une partie des mathématiques. L\'algèbre booléenne est à la base du fonctionnement interne de tous les ordinateurs modernes.\n\nBoole était le fils d\'un cordonnier et n\'a jamais fréquenté d\'école autre que l\'école primaire. Il a appris seul les mathématiques, le latin et le grec, le français et l\'allemand.</string>
     <string name="diffie">Avec Martin Hellmann, Whitfield Diffie a développé l\'échange de clés entre deux parties, qui porte leur nom, et a ainsi créé une condition essentielle pour des connexions sécurisées sur Internet.\n\nDiffie s\'intéresse également aux questions sociétales liées à la cryptographie et est un fervent défenseur du droit à la vie privée.</string>
-    <string name="toast_enter_stage">Niveau %d</string>
+    <string name="toast_enter_stage">Niveau %s</string>
     <string name="conway">John Horton Conway est surtout connu pour l\'invention du Conway\'s Game Of Life, un automate cellulaire qui génère des motifs vivants complexes sur un écran d\'ordinateur. \n\nIl s\'est intéressé aux jeux mathématiques, avec et sans ordinateur, et a publié l\'un des premiers algorithmes permettant de résoudre le cube de Rubik. Cependant, il a également apporté de nombreuses contributions aux mathématiques « sérieuses ».</string>
     <string name="query_purchase_life">Voulez-vous dépenser %s pour récupérer une vie ?</string>
     <string name="annotation_purchase_life">Cette boîte de dialogue peut être désactivée dans les « Paramètres ». Vous pourrez toujours acheter des vies en tapant sur la CPU.</string>
