--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -264,4 +264,5 @@
     <string name="url_boole">https://fr.wikipedia.org/wiki/George_Boole</string>
     <string name="coins_available">Écus à disposition : %d</string>
     <string name="coins_received_as_gift">Vous avez reçu un cadeau de %d écus.</string>
+    <string name="settings_use_hex">Numéros de niveau en hexadécimal</string>
 </resources>
