--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,7 +13,7 @@
     <string name="cleared">Level geschafft.</string>
     <string name="last_stage">Letzter Level war %d.</string>
     <string name="win">Gewonnen.</string>
-    <string name="next_stage">Nächster Level: %d</string>
+    <string name="next_stage">Nächster Level: %s</string>
     <string name="coins_gathered">Gesammelte Coins: %d.</string>
     <string name="game_start">Start des Spiels.</string>
     <string name="enter_game">Los</string>
@@ -24,7 +24,7 @@
     <string name="selectLevel">Levelauswahl</string>
     <string name="play_selected_level">Level spielen</string>
     <string name="button_marketplace">Helden</string>
-    <string name="level_entry">Level %d</string>
+    <string name="level_entry">Level %s</string>
     <string name="level_selector">Level-Auswahl</string>
     <string name="button_refund_all">Zurücksetzen</string>
     <string name="choice_1">Ja, noch einmal ganz von vorn beginnen.</string>
@@ -99,7 +99,7 @@ Das Verschieben ist gleichbedeutend mit einer Division durch 2."
     <string name="about_license">Dieses Spiel ist Open Source Software. Mehr Information auf <a href="https://github.com/ochadenas/cpudefense">github.com/ochadenas/cpudefense</a>\n\nDie Bilder der Heldinnen und Helden basieren überwiegend auf gemeinfreien Werken.\n\nAutoren der Originalfotos:\n  Alex Handy (CC BY-SA 2.0)\n  Jacob Appelbaum (CC BY-SA 2.5)\n  Konrad Jacobs (CC BY-SA 2.0 de)\n  Rama (CC BY-SA 2.0 fr)\n  Shervinafshar (CC BY-SA 3.0)\n  Tony Bove (CC BY 3.0)\n  Wolfgang Hunscher (CC BY-SA 3.0)\n  Silvano de Gennaro (mit freundlicher Genehmigung)\n  Clermont Auvergne Métropole (CC BY-SA 4.0)\n  Jean-Frédéric (CC BY 2.0)\n  Tekniska Museet (CC BY 2.0)\n  The Royal Society (CC BY-SA 4.0)\n  Tanyakh (CC BY-SA 4.0)\n    \nBilder der Computerplatinen:\n  Autopilot (CC BY-SA 4.0)\n  Bill Bertram (CC-BY 2.0)\n  Oliver Chadenas (CC BY-SA 3.0)\n  Smial (FAL)\n\nAlle anderen Grafiken:\n  Oliver Chadenas (CC BY-SA 3.0)</string>
     <string name="about_info_title">Info</string>
     <string name="about_info_text">"Weitere Informationen und Tipps im Online-Wiki. "</string>
-    <string name="play_level_x">Level %d spielen</string>
+    <string name="play_level_x">Level %s spielen</string>
     <string name="link_wiki">Wiki</string>
     <string name="button_exit">Ende</string>
     <string name="button_retry">Erneut spielen</string>
